--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -45,7 +45,20 @@
             </TabItem>
 
             <TabItem Name="ListOfMovies" Header="List Of Movies" Width="Auto">
-                
+                <Grid>
+                    <Button Content="Seen It!" HorizontalAlignment="Center" Margin="0,80,0,0" VerticalAlignment="Top" Height="60" Width="80" FontFamily="Bell MT" FontSize="20"/>
+                    <ComboBox HorizontalAlignment="Center" Margin="0,310,0,0" VerticalAlignment="Top" Width="120" FontFamily="Bell MT"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="0,276,0,0" TextWrapping="Wrap" Text="1-5*" TextAlignment="Center" VerticalAlignment="Top" Height="29" Width="120" FontFamily="Bell MT" FontSize="20"/>
+                    <ComboBox HorizontalAlignment="Left" Margin="22,99,0,0" VerticalAlignment="Top" Width="100"/>
+                    <ComboBox HorizontalAlignment="Left" Margin="188,99,0,0" VerticalAlignment="Top" Width="100"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="46,72,0,0" TextWrapping="Wrap" Text="Genre" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="20"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="207,72,0,0" TextWrapping="Wrap" Text="Sort By" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="20"/>
+                    <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="22,152,512,61"/>
+                    <Image Source="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" HorizontalAlignment="Left" Height="114" Margin="606,80,0,0" VerticalAlignment="Top" Width="114"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="627,35,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="36"/>
+                    <TextBox HorizontalAlignment="Left" Margin="537,236,0,0" TextWrapping="Wrap" Text="movie details here" VerticalAlignment="Top" Width="253" Height="137" FontFamily="Bell MT" FontSize="18"/>
+
+                </Grid>
             </TabItem>
         </TabControl>
     </Grid>
