--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -60,6 +60,19 @@
 
                 </Grid>
             </TabItem>
+
+            <TabItem Name="SeenMovies" Header="Seen Movies" Width="Auto">
+                <Grid>
+                    <Image Source="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" HorizontalAlignment="Left" Height="114" Margin="606,80,0,0" VerticalAlignment="Top" Width="114"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="627,35,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="36"/>
+                    <TextBox HorizontalAlignment="Left" Margin="537,236,0,0" TextWrapping="Wrap" Text="movie details here" VerticalAlignment="Top" Width="253" Height="137" FontFamily="Bell MT" FontSize="18"/>
+                    <ComboBox HorizontalAlignment="Center" Margin="0,236,0,0" VerticalAlignment="Top" Width="120" FontFamily="Bell MT"/>
+                    <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Change Review" TextAlignment="Center" VerticalAlignment="Top" Height="43" Width="120" FontFamily="Bell MT" FontSize="20" Margin="0,178,0,0"/>
+                    <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="22,118,476,61"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="80,55,0,0" TextWrapping="Wrap" Text="Seen Movies" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="36"/>
+
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
 </Window>
