--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -73,13 +73,13 @@
             <TabItem Name="SeenMovies" Header="Seen Movies" Width="Auto">
                 <Grid>
                     <Image x:Name="moviePoster2" Source="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" HorizontalAlignment="Left" Height="114" Margin="606,80,0,0" VerticalAlignment="Top" Width="114"/>
-                    <TextBlock x:Name="movieTitle2" HorizontalAlignment="Left" Margin="627,35,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="36"/>
+                    <TextBlock x:Name="movieTitle2" HorizontalAlignment="Left" Margin="537,20,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="24" Width="247" TextAlignment="Center"/>
                     <TextBox x:Name="movieDetails2" HorizontalAlignment="Left" Margin="537,236,0,0" TextWrapping="Wrap" Text="movie details here" VerticalAlignment="Top" Width="253" Height="137" FontFamily="Bell MT" FontSize="18"/>
                     <ComboBox x:Name="ratingCombo2" HorizontalAlignment="Center" Margin="0,236,0,0" VerticalAlignment="Top" Width="120" FontFamily="Bell MT"/>
                     <TextBlock x:Name="ratingText2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Change Review" TextAlignment="Center" VerticalAlignment="Top" Height="43" Width="120" FontFamily="Bell MT" FontSize="20" Margin="0,178,0,0"/>
-                    <ListBox x:Name="seenMoviesList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="22,118,476,61"/>
+                    <ListBox x:Name="seenMoviesList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="22,118,476,61" SelectionChanged="seenMoviesList_SelectionChanged"/>
                     <TextBlock x:Name="seenMoviesText" HorizontalAlignment="Left" Margin="80,55,0,0" TextWrapping="Wrap" Text="Seen Movies" VerticalAlignment="Top" FontFamily="Bell MT" FontSize="36"/>
-                    <Button x:Name="exit2" Content="X" HorizontalAlignment="Left" Margin="753,10,0,0" VerticalAlignment="Top" Height="21" Width="31" FontSize="16" Click="exit2_Click"/>
+                    <Button x:Name="exit2" Content="X" HorizontalAlignment="Left" Margin="753,-1,0,0" VerticalAlignment="Top" Height="21" Width="31" FontSize="16" Click="exit2_Click"/>
 
                 </Grid>
             </TabItem>
